--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
                     console.log('Inspect Element is disabled on this website.');
                 }
             });
+
+            //prevent or disable developer options
+            document.addEventListener("keydown", function(event) {
+                if (event.ctrlKey && event.shiftKey && event.key === "I") {
+                    event.preventDefault();
+                }
+            });
             </script>
     </body>
 </html>
